--- a/File/style.css
+++ b/File/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
 
 body {
-  background-color: #1a1a1a;
+  background-color: #4a618a;
   color: #4a5b65;
   font-family: "Roboto Mono", monospace;
   font-size: 14px;
@@ -16,7 +16,7 @@ body {
 }
 
 .tdl-holder h2 {
-  background-color: #303030;
+  background-color: #7AB2D3;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   text-align: center;
